k8s/infrastructure/monitoring/thanos/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-thanos-ingress
  namespace: thanos
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/component: query}}
  ingress:
    - {fromEntities: [host], toPorts: [{ports: [{port: '9090', protocol: TCP}]}]}  # Health probes
    - {fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: grafana}}], toPorts: [{ports: [{port: '9090', protocol: TCP}]}]}  # Grafana datasource
    - {fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}}], toPorts: [{ports: [{port: '9090', protocol: TCP}]}]}  # Prometheus scrape
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-thanos-egress
  namespace: thanos
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/component: query}}
  egress:
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring, app.kubernetes.io/name: prometheus}}], toPorts: [{ports: [{port: '10901', protocol: TCP}]}]}  # Prometheus sidecar gRPC
